apps/speedtest-tracker/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: speedtest-tracker
  namespace: apps
  labels:
    app.kubernetes.io/name: speedtest-tracker
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: speedtest-tracker
  ports:
    - name: http
      port: 80
      targetPort: access-http
      protocol: TCP
